--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
   },
 
   // Add the IDs of extensions you want installed when the container is created.
-  "extensions": [],
+  "extensions": [ "james-yu.latex-workshop" ],
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
