build: add spell-checker plugins to devcontainer and includes container user to sudoers

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,4 +4,4 @@ FROM texlive/texlive:latest
 
 ARG USER_UID=1000
 ARG USER_GID=${USER_UID}
-RUN useradd --create-home --shell /bin/bash --uid ${USER_UID} tex && groupmod --gid ${USER_GID} tex
+RUN useradd -m -s /bin/bash -u ${USER_UID} -G sudo tex && groupmod --gid ${USER_GID} tex
